--- a/styles.css
+++ b/styles.css
@@ -105,5 +105,52 @@ body{
         }
 .main{
     background-color: #e0f2fe;
+    padding: 12px;
+    display: grid;
+    gap: 12px;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 2fr 2fr;
 }
+    .rightbar{
+        grid-row-end: span: 3;
+    }
+        .board{
+            background-color: white;
+            padding: 24px;
+            border-radius: 12px;
+            box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+            margin-bottom: 48px;
+        }
 
+        .announce{
+            padding-left: 12px;
+            display: -webkit-box;
+            -webkit-line-clamp: 4;
+            -webkit-box-orient: vertical;  
+            overflow: hidden;
+        }
+        .announce h4{
+            margin-bottom: 0;
+        }
+        .announce p{
+            margin-top: 1px;
+            margin-bottom: 2px;
+            color: gray;
+        }
+
+        .divider{
+            margin-top: 24px;
+            margin-bottom: 12px;
+            border-bottom: 2px solid lightgray;
+        }
+
+        .trending{
+            display: grid;
+            grid-template-columns: 1fr 3fr;
+            grid-template-rows: 1fr 1fr;
+        }
+
+        .profiletrend{
+            width: 48px;
+            grid-row-end: span 2;
+        }
