--- a/styles.css
+++ b/styles.css
@@ -144,13 +144,22 @@ body{
             border-bottom: 2px solid lightgray;
         }
 
-        .trending{
+        .trend-item{
             display: grid;
             grid-template-columns: 1fr 3fr;
             grid-template-rows: 1fr 1fr;
-        }
+            margin-bottom: 12px;
 
-        .profiletrend{
-            width: 48px;
-            grid-row-end: span 2;
         }
+            .trend-profile{
+                width: 48px;
+                grid-row-end: span 2;
+                justify-self: center;
+            }
+            .trend-user{
+                grid-column-start: 2;
+            }
+            .trend-content{
+                grid-column-start: 2;
+                grid-row-start: 2;
+            }
