--- a/styles.css
+++ b/styles.css
@@ -109,11 +109,23 @@ body{
     display: grid;
     gap: 12px;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 2fr 2fr;
+    grid-template-rows: 1fr 20fr;
 }
-    .rightbar{
-        grid-row-end: span: 3;
+    .main-content{
+        grid-row-start: 2;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        background-color: gray;
+        height: 200px
     }
+
+    .rightbar{
+        grid-column-start: 2;
+        grid-row-end: span 2;
+    }
+        .rightbar-title{
+            grid-row-end: 2;
+        }
         .board{
             background-color: white;
             padding: 24px;
@@ -143,10 +155,12 @@ body{
             margin-bottom: 12px;
             border-bottom: 2px solid lightgray;
         }
-
+        .trending{
+            display: grid;
+            grid-template-columns: repeat(auto-fill minmax(300px 1fr));
+        }
         .trend-item{
             display: grid;
-            grid-template-columns: 1fr 3fr;
             grid-template-rows: 1fr 1fr;
             margin-bottom: 12px;
 
