Style main content card

--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,36 @@ body{
         background-color: gray;
         height: 200px
     }
+        .mainboard{
+            background-color: white;
+            border-radius: 12px;
+            box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+            display: grid;
+            grid-template-columns: 10px 1fr;
+            grid-template-rows: 3fr 1fr;
+            overflow: hidden;
+        }
+            .mainboard-color{
+                grid-row-end: span 3;
+                background-color: blue;
+            }
+            .mainboard-content{
+                margin-left: 12px;
+                margin-right: 48px;
+                grid-row-end: span 2;
+            }
+            .mainboard-links{
+                display: grid;
+                grid-template-columns: 2fr 1fr 1fr 1fr;
+                justify-content: center;
+                align-items: center;
+            }
+            .mainboard-links img{
+                width: 24px;
+                align-self: center;
+                justify-self: center;
+                margin-bottom: 24px;
+            }
 
     .rightbar{
         grid-column-start: 2;
