--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body{
 
     .header{
         padding: 24px;
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     }
 
     .top{
@@ -108,9 +108,12 @@ body{
     padding: 12px;
     display: grid;
     gap: 12px;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 20fr;
 }
+    .main h2{
+        margin-bottom: 6px;
+    }
     .main-content{
         grid-row-start: 2;
         grid-column-start: 1;
@@ -119,7 +122,8 @@ body{
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         grid-auto-rows: max-content;
-        gap: 24px
+        gap: 24px;
+        margin-right: 12px;
 
     }
         .mainboard{
@@ -152,6 +156,7 @@ body{
     .rightbar{
         grid-column-start: 2;
         grid-row-end: span 2;
+        margin-right: 12px;
     }
         .rightbar-title{
             grid-row-end: 2;
@@ -187,23 +192,33 @@ body{
         }
         .trending{
             display: grid;
-            grid-template-columns: repeat(auto-fill minmax(300px 1fr));
         }
-        .trend-item{
-            display: grid;
-            grid-template-rows: 1fr 1fr;
-            margin-bottom: 12px;
-
-        }
-            .trend-profile{
-                width: 48px;
+            .trend-item{
+                display: grid;
+                
+                grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+                justify-items: center;
+            }
+            .trend-item-pic{
                 grid-row-end: span 2;
-                justify-self: center;
+                align-self: center;
             }
-            .trend-user{
-                grid-column-start: 2;
+            .trend-item-pic img{
+                width: 48px;
+                
             }
-            .trend-content{
-                grid-column-start: 2;
-                grid-row-start: 2;
+            .trend-item-content{
+                justify-self: baseline;
+                align-self: center;
             }
+                .trend-user{
+                    margin-bottom: 0px;
+                    align-self: end;
+                    justify-self: baseline;
+                }
+                .trend-content{
+                    color: gray;
+                    margin-bottom: 12px;
+                    justify-self: baseline;
+                    margin-bottom: 1rem;
+                }
