--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body{
         color: white;
         padding: 24px;
         font-size: 24px;
-        font-weight: bold;
+        font-weight: 500;
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-auto-rows: max-content;
@@ -32,6 +32,10 @@ body{
         .ico-white{
             filter: invert();
             width: 24px;
+        }
+
+        .logo{
+            width: 48px;
         }
 
     .header{
@@ -147,6 +151,9 @@ body{
             .mainboard-content{
                 margin-left: 12px;
                 margin-right: 48px;
+            }
+            .mainboard-content p{
+                color: gray;
             }
             .mainboard-links{
                 display: grid;
