Fix header shadow

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,8 @@ body{
 
     .header{
         padding: 24px;
-        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+        position: relative;
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;    
     }
 
     .top{
