--- a/styles.css
+++ b/styles.css
@@ -188,6 +188,7 @@ body{
             border-radius: 12px;
             box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
             margin-bottom: 48px;
+            margin-top: 0px;
         }
 
         .announce{
@@ -196,6 +197,9 @@ body{
             -webkit-line-clamp: 4;
             -webkit-box-orient: vertical;  
             overflow: hidden;
+        }
+        .spacer{
+            margin-top: 18px;
         }
         .announce h4{
             margin-bottom: 0;
